kubernetes/apps/monitoring/goldilocks/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: goldilocks-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`goldilocks.home.arpa`)
      kind: Rule
      services:
        - name: goldilocks-dashboard
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: goldilocks.home.arpa
